err/python-4chapy.err
Listing '.'...
Listing './bin'...
Compiling './bin/DisplayThread.py'...
***   File "./bin/DisplayThread.py", line 91
    print "Please use --board to define a board name. "
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/ReadmeExample1.py'...
***   File "./bin/ReadmeExample1.py", line 31
    print u"Board %s (%s)" % (board.Board, board.BoardName)
                         ^
SyntaxError: invalid syntax

Compiling './bin/ReadmeExample2.py'...
***   File "./bin/ReadmeExample2.py", line 30
    print "--- %d ---" % post.Number
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Fourchapy'...
Compiling './lib/python3.5/site-packages/Fourchapy/Board.py'...
***   File "./lib/python3.5/site-packages/Fourchapy/Board.py", line 81
    print self.displayToString(nameWidth = nameWidth)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Fourchapy/Fetcher.py'...
***   File "./lib/python3.5/site-packages/Fourchapy/Fetcher.py", line 79
    raise ValueError, "No URL defined"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Fourchapy/Post.py'...
***   File "./lib/python3.5/site-packages/Fourchapy/Post.py", line 103
    print self.displayToString(nameWidth = nameWidth)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Fourchapy/Thread.py'...
***   File "./lib/python3.5/site-packages/Fourchapy/Thread.py", line 54
    raise ThreadNotFoundError, "Thread ID %r from %r was not found on the server. " % (self.Thread, self.Board)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Fourchapy/ThreadPage.py'...
***   File "./lib/python3.5/site-packages/Fourchapy/ThreadPage.py", line 53
    raise ThreadNotFoundError, "Page number %d from %r was not found on the server. " % (self.Page, self.Board)
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_4chapy-0.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
